# studioworks-core

./: .gitignore  INSTALLATION.md  README.md  pyproject.toml
.claude/commands/: ableton-debug.md  ableton-export.md  ableton-init.md  ableton-snapshot.md  arrangement-coach.md  automation-coach.md  chord-pro.md  genre-edm-production.md  groove-builder.md  mastering-prep.md  mixer-doctor.md  producer-mode.md  reference-match.md  sidechain-setup.md  sound-designer.md  tempo-coach.md  vocal-chain.md
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: server.py
skills/arrangement-coach/: SKILL.md
skills/automation-coach/: SKILL.md
skills/chord-pro/: SKILL.md
skills/genre-edm-production/: SKILL.md
skills/groove-builder/: SKILL.md
skills/mastering-prep/: SKILL.md
skills/mixer-doctor/: SKILL.md
skills/producer-mode/: SKILL.md
skills/reference-match/: SKILL.md
skills/sidechain-setup/: SKILL.md
skills/sound-designer/: SKILL.md
skills/tempo-coach/: SKILL.md
skills/vocal-chain/: SKILL.md
tests/unit/: test_arrangement_clip_tools.py  test_clip_name_and_browser.py  test_device_commands.py  test_session_clip_tools.py  test_socket_layer.py
