[project]
name = "studioworks-core"
version = "1.0.0"
description = "Ableton Live integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "uisato"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
studioworks-core = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/mumumedia/studioworks-core"
"Bug Tracker" = "https://github.com/mumumedia/studioworks-core/issues"

[tool.pytest.ini_options]
markers = [
    "integration: requires running Ableton Live instance",
]
addopts = "-m 'not integration'"
